--- a/package.json
+++ b/package.json
@@ -9,20 +9,41 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/metro-runtime": "~3.1.3",
+    "@react-native-async-storage/async-storage": "^1.22.3",
+    "@react-native-camera-roll/camera-roll": "^7.4.2",
+    "@react-native-firebase/app": "^19.0.1",
+    "@react-native-firebase/auth": "^19.0.1",
     "@react-navigation/bottom-tabs": "^6.5.16",
     "@react-navigation/native": "^6.1.12",
     "@react-navigation/native-stack": "^6.9.20",
     "@react-navigation/stack": "^6.3.23",
+    "@reduxjs/toolkit": "^2.2.1",
     "@types/react": "~18.2.45",
     "expo": "~50.0.7",
+    "expo-av": "~13.10.5",
+    "expo-dev-client": "^3.3.9",
+    "expo-firebase-recaptcha": "^2.3.1",
+    "expo-image-picker": "~14.7.1",
     "expo-status-bar": "~1.11.1",
+    "firebase": "^10.8.1",
     "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-native": "0.73.4",
+    "react-native-gesture-handler": "~2.14.0",
+    "react-native-image-picker": "^7.1.0",
     "react-native-otp-entry": "^1.4.1",
+    "react-native-paper": "^5.12.3",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-snap-carousel": "^3.9.1",
-    "typescript": "^5.3.0"
+    "react-native-web": "~0.19.6",
+    "react-native-webview": "13.6.4",
+    "react-redux": "^9.1.0",
+    "redux": "^5.0.1",
+    "start": "^5.1.0",
+    "typescript": "^5.3.0",
+    "@react-native-community/slider": "4.4.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
